[tool.poetry]
name = "ragstack-ai-tests-utils"
version = "0.0.1.pre"
description = "DataStax RAGStack Tests common utilities"
license = "BUSL-1.1"
authors = ["DataStax"]
readme = "README.md"
repository = "https://github.com/datastax/ragstack-ai"
documentation = "https://docs.datastax.com/en/ragstack"
packages = [{ include = "ragstack_tests_utils" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
cassio = "~0.1.8"
testcontainers = "^3.7.1"
requests = "^2.32.2"
pytest = "^7.3.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"

[tool.mypy]
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
follow_imports = "normal"
ignore_missing_imports = true
no_implicit_reexport = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
