[tool.poetry]
name = "ragstack-ai-tests-utils"
version = "0.0.1.pre"
description = "DataStax RAGStack Tests common utilities"
license = "BUSL-1.1"
authors = ["DataStax"]
readme = "README.md"
repository = "https://github.com/datastax/ragstack-ai"
documentation = "https://docs.datastax.com/en/ragstack"
packages = [{ include = "ragstack_tests_utils" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
cassio = "~0.1.8"
testcontainers = "^3.7.1"
requests = "^2.32.2"
pytest = "^7.3.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_error_codes = true
show_error_context = true

[[tool.mypy.overrides]]
module = "testcontainers.*,cassandra.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
