[tool.poetry]
name = "colbertbase"
version = "0.1.0"
description = ""
authors = ["ming luo <itestmycode@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
colbert-ai = "^0.2.19"
cassandra-driver = "^3.29.0"
torch = "^2.2.1"
pyarrow = "14.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
